<resources>
    <string name="app_name">Ajkune-Professional</string>
    <string name="password">Password</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="home">Home</string>
    <string name="appointment">Appointment</string>
    <string name="gifs">Gifs</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <string name="filter">Filter</string>
    <string name="ajkunes_products">Ajkunes’ products</string>
    <string name="categories">Categories</string>
    <string name="price">%1$s CHF</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="specification">Specification</string>
    <string name="choose_gender">Choose gender</string>
    <string name="choose_date">Choose date</string>
    <string name="phone_number">Phone number</string>
    <string name="ajkune_camera_permission">Ajkune Professional needs permission to access camera for take photo you want to post!</string>
    <string name="ajkune_gallery_permission">Ajkune Professional needs permission to access gallery for getting photo you want to post!</string>
    <string name="make_appointment_with_ajkune">Make appointment with Ajkune</string>
    <string name="hello_and_welcome_to_our_scheduling_page">Hello and welcome to our scheduling page!</string>
    <string name="select_a_day">Select a day</string>
    <string name="choose_time">Choose time</string>
    <string name="confirm_your_appointment">Confirm your appointment</string>
    <string name="your_message">Your Message</string>
    <string name="write_a_message">Write a message</string>
    <string name="make_appointment">Make appointment</string>
    <string name="success">Success</string>
    <string name="back_to_appointment">Back to appointment</string>
    <string name="appointment_success_date_time">Your appointment was successfully made at %1$s from %2$s.</string>
    <string name="filter_search">Filter search</string>
    <string name="price_range">Price range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="sort_by">Sort by</string>
    <string name="products">Products</string>
    <string name="done">Done</string>
    <string name="buy_this_product">Buy this product</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="title">Title *</string>
    <string name="review_comment">Review comment *</string>
    <string name="comment">Comment</string>
    <string name="comment_dots">Comment…</string>
    <string name="ajkunes_offers">Ajkunes’ offers</string>
    <string name="check_your_email_and_we_ll_send_the_instructions">Check your email and we’ll send the instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address_linked_to_your_account">Enter your email address linked to your account</string>
    <string name="next">Next</string>
    <string name="email_address_verification">Email address verification</string>
    <string name="enter_the_code_you_came_from_to_receive_by_email">Enter the code you came from to receive by email</string>
    <string name="create_new_password">Create new password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="empty_password">Please enter your password.</string>
    <string name="register_empty_confirm_password">Please confirm your password</string>
    <string name="register_password_not_match">Passwords do not match.</string>
    <string name="password_changed_successfully">Password was changed successfully</string>
    <string name="email_not_found">Email not found</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="no_added_address_yet">No added address yet!</string>
    <string name="add_address">Add address</string>
    <string name="edit">Edit</string>
    <string name="your_address">Your address</string>
    <string name="user_address">%1$s \n%2$s \n%3$s \n%4$s</string>
    <string name="add_new_address">Add new address</string>
    <string name="street">Street</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip code</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>

    <string name="message_description">Name: %1$s \n Email: %2$s \nDescription:  %3$s</string>
    <string name="add_your_address">Add your address</string>
    <string name="edit_your_address">Edit your address</string>
    <string name="see_all">See all</string>
    <string name="change_language">Change language</string>
    <string name="choose_language">Choose language</string>
    <string name="there_is_no_product_in_this_category">There is no product in this category!</string>
    <string name="play">Play</string>
    <string name="play_lucky_wheel">Play “Lucky wheel”</string>
    <string name="lucky_wheel">Lucky wheel</string>
    <string name="there_is_no_gift_for_you_at_the_moment">There is no gift for you at the moment</string>
    <string name="there_is_no_offer_in_this_category">There is no offer in this category!</string>
    <string name="your_gifs">Your gifs</string>
    <string name="you_have_not_won_any_gift">You have not won any gift yet</string>
    <string name="fill_required_fields">Please fill required fields.</string>
    <string name="comment_added">Comment added successfully</string>
    <string name="gift_added_details">Congratulations you have win : %1$s. For more details please contact in this email : %2$s</string>
    <string name="selected_date">Date : %1$s</string>

</resources>