<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".architecture.fragment.dashboard.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/account"
                    android:textSize="16sp"
                    android:fontFamily="@font/gordita_medium"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#ebf0ff"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">

                    <TextView
                        android:id="@+id/txtProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/gordita_medium"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="12dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingEnd="0dp"
                        android:paddingBottom="12dp"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/user_profile_icon" />

                    <TextView
                        android:id="@+id/txtLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/gordita_medium"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingTop="12dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="12dp"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/language_icon" />

                    <TextView
                        android:id="@+id/txtYourGifts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/gordita_medium"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="0dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingBottom="12dp"
                        android:text="@string/your_gifs"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/gifs_icon"
                        app:drawableTint="@color/cl_a8466f" />

                    <TextView
                        android:id="@+id/txtLogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:fontFamily="@font/gordita_medium"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="0dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingBottom="12dp"
                        android:text="@string/log_out"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/group_506" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
</layout>